# polar2grid

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  NEWS.rst  NEWS_GEO2GRID.rst  README.rst  RELEASING.md  build_environment.yml  create_conda_software_bundle.sh  create_dev_env.sh  create_software_bundle.sh  jenkins_environment.yml  mod_create_software_bundle.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy-sdist.yaml
awips_scmi/: README.txt
awips_scmi/Polar/: PolarCommonDescription.xml
awips_scmi/styleRules/: goesrCMI-ImageryStyleRules.xml
continuous_integration/: environment.yaml
doc/: Makefile
doc/source/: NEWS.rst  NEWS_GEO2GRID.rst  complex_composites.rst  compositors.rst  conf.py  conf_polar2grid.py  custom_config.rst  custom_grids.rst  data_access.rst  design_overview.rst  doi_role.py  enhancements.rst  generate_summary_table.py  getting_started.rst  glossary.rst  grids.rst  image_processing_techniques.rst  index.rst  installation.rst  introduction.rst  misc_recipes.rst  overview.rst  remapping.rst  remapping_polar.rst  rescaling.rst  summary_table.rst  summary_table_geo2grid.rst  summary_table_geo2grid_readers.rst  summary_table_geo2grid_writers.rst  toctree_filter.py  utilscripts.rst  version3_implementation.rst  viirs_day_night_band.rst
etc/: pyspectral.yaml  resampling.yaml
etc/colormaps/: MVFR_PROB.cmap  abi_l2_modified_cloud_top.cmap  amsr2_36h.cmap  p2g_sst_palette.txt  viirs_edr_flood_water_detection.cmap
etc/composites/: abi.yaml  ahi.yaml  modis.yaml  viirs.cfg  viirs.yaml
etc/enhancements/: abi.yaml  agri.yaml  ahi.yaml  ami.yaml  generic.yaml  mersi-2.yaml  modis.yaml  viirs.yaml
etc/readers/: mirs.yaml  viirs_l1b.cfg  viirs_l1b.yaml
etc/writers/: awips_tiled.yaml  hdf5.yaml
integration_tests/: README.rst  config.yaml  integration_tests.py  make_docs.sh  run.sh  save_bundle.sh
integration_tests/features/: data_conversion.feature  environment.py  geo2grid.feature  polar2grid.feature  polar2grid_product_list.feature  utilities.feature
modis_crefl/: Makefile  Makefile.static  README.txt  crefl.1.7.1.c  crefl.c  run_modis_crefl.sh
ms2gt/: 00README.txt  Makefile  Makefile.inc  ms2gt_env.csh
ms2gt/doc/: index.html  mod02_usage  mod10_l2_usage  ppgc.html  tutorial_1.html  tutorial_2.html  tutorial_3.html  tutorial_4.html  tutorials.html
ms2gt/grids/: Moa125.gpd  Moa750.gpd  N200correct.mpp  Na1.gpd  lrsa_geo007.5.gpd  lrsa_geo015.0.gpd  lrsa_geo030.0.gpd  lrsa_geo180.0.gpd  lrsa_geo360.0.gpd  lrsa_geo720.0.gpd  lrsa_utm00250.gpd  lrsa_utm00500.gpd  lrsa_utm01000.gpd  lrsa_utm05000.gpd  lrsa_utm12500.gpd  lrsa_utm25000.gpd  waisdiv500.gpd
ms2gt/include/: byteswap.h  cdb.h  cdb_byteswap.h  define.h  grid_io.h  grids.h  isin.h  keyval.h  maps.h  mapx.h  matrix_io.h  pmodel.h  proj.h  svd.h
ms2gt/src/: Makefile
ms2gt/tutorial_1/: Gl1250.gpd  ancilfile.txt  chanfile.txt  gl1_2000153_1445.csh  listfile.txt
ms2gt/tutorial_2/: Gl0250.gpd  chanfile.txt  gl250_2000153_1445.csh  listfile.txt
ms2gt/tutorial_3/: Colorado.mpp  Colorado500.gpd  colo_2000269_1745.csh  latlonlist.txt  listfile.txt
ms2gt/tutorial_4/: S_stereo.mpp  WRoss1km.gpd  WRoss1km0.gpd  WRoss1km1.gpd  listfile.txt  wross_2001024_1635.csh
polar2grid/: __init__.py  __main__.py  _glue_argparser.py  add_coastlines.py  add_colormap.py  binary.py  compare.py  debug_data.py  glue.py  glue_legacy.py  gtiff_backend.py  hdf5_backend.py  nc.py  plot_ncdata.py  plot_scene.py  sample_nearest.py
polar2grid/avhrr/: __init__.py  __main__.py  avhrr2swath.py  readers.py
polar2grid/awips/: __init__.py  __main__.py  awips_backend.ini  awips_config.py  awips_netcdf.py  scmi_backend.ini  scmi_backend.py
polar2grid/composites/: __init__.py  enhanced.py
polar2grid/compositors/: __init__.py  __main__.py  compositors.ini  rgb.py
polar2grid/core/: __init__.py  containers.py  dtype.py  fbf.py  frontend_utils.py  histogram.py  proj.py  rescale.py  roles.py  script_utils.py  time_utils.py
polar2grid/crefl/: __init__.py  crefl2swath.py  crefl_wrapper.py
polar2grid/drrtv/: __init__.py  __main__.py  swath.py
polar2grid/enhancements/: __init__.py  shared.py  viirs.py
polar2grid/etc/: pyspectral.yaml  resampling.yaml
polar2grid/filters/: __init__.py  _base.py  _filter_scene.py  _utils.py  day_night.py  resample_coverage.py
polar2grid/fonts/: __init__.py
polar2grid/grids/: __init__.py  config_helper.py  grids.conf  grids.yaml  manager.py
polar2grid/iasi/: __init__.py  iasi2fbf.py  swath.py  tools.py
polar2grid/mirs/: __init__.py  __main__.py  mirs2swath.py
polar2grid/modis/: __init__.py  __main__.py  bt.py  modis_geo_interp_250.py  modis_guidebook.py  modis_to_swath.py
polar2grid/ninjo/: __init__.py  __main__.py  ninjo_backend.ini  ninjo_backend.py  ninjotiff_tifffile.py  tifffile.py
polar2grid/readers/: __init__.py  _base.py  abi_l1b.py  abi_l2_nc.py  acspo.py  agri_fy4a_l1.py  agri_fy4b_l1.py  agri_l1.py  ahi_hrit.py  ahi_hsd.py  ami_l1b.py  clavrx.py  (+21 more)
py/: Makefile  __init__.py  create_dev_env.sh  create_software_bundle.sh
swbundle/: GEO2GRID_README.txt  POLAR2GRID_README.txt  README.txt  acspo2awips.sh  acspo2gtiff.sh  acspo2hdf5.sh  add_coastlines.sh  add_colormap.sh  avhrr2awips.sh  avhrr2binary.sh  avhrr2gtiff.sh  avhrr2hdf5.sh  convert_grids_conf_to_yaml.sh  crefl2awips.sh  crefl2gtiff.sh  crefl2ninjo.sh  download_pyspectral_data.sh  drrtv2awips.sh  drrtv2gtiff.sh  drrtv2hdf5.sh  env.sh  geo2grid.sh  geocat2scmi.py  glue.sh  gtiff2kmz.sh  gtiff2mp4.sh  hdf5_backend.sh  mirs2awips.sh  mirs2gtiff.sh  mirs2hdf5.sh  modis2awips.sh  modis2binary.sh  modis2gtiff.sh  modis2hdf5.sh  modis2ninjo.sh  overlay.sh  p2g_compare.sh  p2g_compare_geotiff.sh  p2g_compare_netcdf.sh  p2g_grid_helper.sh  (+15 more)
swbundle_tests/: m2a_basic_run.sh  m2a_basic_verify.sh  v2a_ak_run.sh  v2a_ak_verify.sh  v2g_ak_run.sh  v2g_ak_verify.sh  v2g_basic_run.sh  v2g_basic_verify.sh  v2g_econus_run.sh
viirs_crefl/: 00readme.txt  Makefile  cviirs.c  h5SDS_transfer_rename.c  install_crefl.sh  run_viirs_crefl.bash  run_viirs_crefl.sh
(+754 files in other folders)
