[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polar2grid"
version = "3.2.0"
authors = [
    {name = "David Hoese", email = "david.hoese@ssec.wisc.edu"},
]
description = "Library and scripts to remap satellite data to a gridded image"
readme = "README.rst"
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "satpy>=0.58.0",
    "rasterio",
    "netCDF4",
    "h5py",
]

[project.optional-dependencies]
utils = ["matplotlib"]
docs = ["sphinx", "rst2pdf", "sphinx-argparse", "pytest"]
tests = ["pytest"]
coastlines = ["pycoast", "pydecorate"]
all = ["matplotlib", "sphinx", "rst2pdf", "sphinx-argparse", "sphinxcontrib-apidoc", "pytest", "pycoast", "pydecorate"]

[project.urls]
Documentation = "https://www.ssec.wisc.edu/software/polar2grid/"
Home-page = "https://cimss.ssec.wisc.edu/cspp/"
Download-URL = "https://pypi.org/project/polar2grid/"
Project-URL = "https://github.com/ssec/polar2grid/"

[project.scripts]
polar2grid = "polar2grid.__main__:p2g_main"
geo2grid = "polar2grid.__main__:g2g_main"

[tool.hatch.build.targets.sdist]
only-include = [
    "polar2grid",
    "NEWS.rst",
    "NEWS_GEO2GRID.rst",
    "swbundle",
]

[tool.hatch.build.targets.wheel]
packages = ["polar2grid"]

[tool.hatch.build.targets.wheel.shared-scripts]
"swbundle/add_coastlines.sh" = "add_coastlines.sh"
"swbundle/add_colormap.sh" = "add_colormap.sh"
"swbundle/convert_grids_conf_to_yaml.sh" = "convert_grids_conf_to_yaml.sh"
"swbundle/download_pyspectral_data.sh" = "download_pyspectral_data.sh"
"swbundle/geo2grid.sh" = "geo2grid.sh"
"swbundle/gtiff2kmz.sh" = "gtiff2kmz.sh"
"swbundle/gtiff2mp4.sh" = "gtiff2mp4.sh"
"swbundle/overlay.sh" = "overlay.sh"
"swbundle/p2g_compare.sh" = "p2g_compare.sh"
"swbundle/p2g_grid_helper.sh" = "p2g_grid_helper.sh"
"swbundle/polar2grid.sh" = "polar2grid.sh"

[tool.pytest.ini_options]
minversion = 6.0
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "info"
testpaths = ["polar2grid/tests"]
filterwarnings = [
    "error",
    "ignore:numpy.ndarray size changed, may indicate binary incompatibility:RuntimeWarning",
    "ignore:The `frequency` argument is pending deprecation:PendingDeprecationWarning"
]

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["E", "W", "B", "D", "T10", "C90"]
# Remove D416 when all docstrings have been converted to google-style
ignore = ["D101", "D102", "D103", "D104", "D105", "D106", "D107", "E203", "D416"]

[tool.ruff.lint.per-file-ignores]
"doc/source/conf.py" = ["E501"]
"polar2grid/readers/*.py" = ["D205", "D400", "D415", "S101"]  # assert allowed in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["polar2grid"]
known-third-party = ["src"]
